# HuggingfaceDownloader

./: .gitignore  README.md  main.py  pyproject.toml  test.py
ui/: proxy_config_widget.py  utils.py
ui/components/: tree_file_selection_dialog.py
